Большой прогресс: реализовал нормальное добавление голосований, голосования, сделал структуру БД, анонимные голосования

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Все опросы</h1>
     {% for suv in data %}
-    <h2><a href="/survey/{{suv.id}}"> {{suv.title }}</a></h2>
+    <h2><a href="/votes/get/{{suv.id}}"> {{suv.title }}</a></h2>
     <p>Описание</p>
     {{suv.description}}
     {% endfor %}
