--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/styles/style.css">
     <title>{{title}}</title>
 </head>
 <body>
     {% block header %}
-    <center>
-        <div class="header-item">
+    
+        <div class="header-items">
             <h2><a href="/">Главная</a></h2>
-            <h2><a href="/create">Создать опрос</a></h2>
+            {% if user %}
+            <h2><a href="/votes/add">Добавить голосование</a></h2>
+            <h2>Привет, {{user.login}}!</h2>
+            {% endif %}
+            {% if not user %}
             <h2><a href="/login">Войти</a></h2>
-            {% if session %}
-            <h2>Привет, {{session.login}}!</h2>
+            <h2><a href="/registration">Регистрация</a></h2>
             {% endif %}        
         </div>
-    </center>
 
     {% endblock %}
 
