--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -6,7 +6,7 @@
 <p>Всего опросов: {{ data.surveys|length }}</p>
     <h2>Опросы</h2>
     {% for suv in data.surveys %}
-    <h2><a href="/survey/{{suv.id}}">{{suv.title}}</a></h2>
+    <h2><a href="/votes/get/{{suv.id}}">{{suv.title}}</a></h2>
     <p>{{suv.description}}</p>
 
 
