Закончил проект. Реализовал редактирование, удаление

--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -34,3 +34,12 @@
 .vote-check {
     flex-direction: row;
 }
+
+.edit-question-form {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30%;
+
+}
